BusOne/src/objects/Product_vod__c.object
<CustomObject>
    <description>The Product Catalog</description>
    <fields>
        <fullName>BOT_Access__c</fullName>
        <description>Used to store the access percentage</description>
        <label>Access %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup relationship to account</description>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>BOT_Account_Drug</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Copay__c</fullName>
        <description>Used to store the value of the copay</description>
        <label>Copay</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Drug_ID__c</fullName>
        <description>Used to store the drug ID</description>
        <label>Drug ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_ID__c</fullName>
        <description>Used to store the Formulary ID</description>
        <label>Formulary ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Demographics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup relationship to Plan demographics</description>
        <label>Plan Demographics</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Product Catalog</relationshipLabel>
        <relationshipName>Plan_Demographics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Status__c</fullName>
        <description>Used to display the status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Preferred</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred Brand</fullName>
                </value>
                <value>
                    <fullName>Non-Preferred Generic</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>Not Listed</fullName>
                </value>
                <value>
                    <fullName>Preferred Brand</fullName>
                </value>
                <value>
                    <fullName>Preferred Generic</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Specialty Non-Preferred</fullName>
                </value>
                <value>
                    <fullName>Specialty Preferred</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>NPB</fullName>
                </value>
                <value>
                    <fullName>NPG</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PG</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>S-NP</fullName>
                </value>
                <value>
                    <fullName>S-P</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOT_Strength__c</fullName>
        <description>Used to store the strength of the Drug</description>
        <label>Strength</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Pack_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify Product Groups that represent a Bundle Pack in Order Management</description>
        <label>Bundle Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cold_Chain_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a product as a cold chain sample. Only applicable to products where Product Type is equal to Sample. Used to require a Tag Alert and Status to be associated with a Sample line item in Sample Transactions and Call Samples.</description>
        <label>Cold Chain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Product_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, this field denotes a product that is distributed by the company. Only products marked as a company product will displayed in My Setup and be available for detailing on call reports. Un-check for competitor&apos;s products.</description>
        <label>Company Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumer_site__c</fullName>
        <description>Link to consumer web site for this product.</description>
        <label>Consumer site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Controlled_Substance_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this checkbox denotes the product as a controlled substance. Call reporting and samples management read this value.</description>
        <label>Controlled Substance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_vod__c</fullName>
        <description>Cost of the product.</description>
        <label>Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_Lot_Catalog_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger automatic creation of Lot Catalog record for the following product types: BRC, Alternative Samples, High Value Promotional, Promotional, Reprint, or Custom.</description>
        <label>Create Lot Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Text area used to describe the product.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>The order (top to bottom) that the product will be displayed in. The absolute number is not important, but lower numbered products are displayed above of higher numbered products.</description>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_vod__c</fullName>
        <description>The Distributor field is used to indicate the name of the Company that will be distributing the BRC Sample Product Types to the requesting Physicians.  The Distributor name is displayed on the Signature capture form for all BRC records.</description>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Name_Report__c</fullName>
        <description>Used to store the name of the drug.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used only for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_UM_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in OM to enable fixed quantity multiples only when ordering this particular product</description>
        <label>Fixed U/M?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formulary_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the related formulary product</description>
        <label>Formulary Product</label>
        <referenceTo>Formulary_Products_vod__c</referenceTo>
        <relationshipLabel>Drugs</relationshipLabel>
        <relationshipName>Drugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Monitoring_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether Inventory Monitoring capture is allowed on the product.</description>
        <label>Inventory Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Order_UOM_vod__c</fullName>
        <description>The Unit of Measure for Sample and Promotional Item inventory order lines.</description>
        <label>Inventory Order UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Quantity_Per_Case_vod__c</fullName>
        <description>Quantity of each ordered item per case</description>
        <label>Inventory Quantity Per Case</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturer_vod__c</fullName>
        <description>Picklist used to select the manufacturer of the product. To change the list, edit the picklist.</description>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3M Pharmaceuticals Division</fullName>
                </value>
                <value>
                    <fullName>Abbott Laboratories</fullName>
                </value>
                <value>
                    <fullName>ALTANA Pharma</fullName>
                </value>
                <value>
                    <fullName>Alza Corporation</fullName>
                </value>
                <value>
                    <fullName>Amgen</fullName>
                </value>
                <value>
                    <fullName>AstraZeneca International</fullName>
                </value>
                <value>
                    <fullName>Barr Laboratories</fullName>
                </value>
                <value>
                    <fullName>BASF</fullName>
                </value>
                <value>
                    <fullName>Bayer Corporation</fullName>
                </value>
                <value>
                    <fullName>Bayer Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Berlex Laboratories, Inc.</fullName>
                </value>
                <value>
                    <fullName>Boehringer Ingelheim Pharmaceuticals, Inc.</fullName>
                </value>
                <value>
                    <fullName>Bristol-Myers Squibb Company</fullName>
                </value>
                <value>
                    <fullName>Elan Corporation</fullName>
                </value>
                <value>
                    <fullName>Eli Lilly and Company</fullName>
                </value>
                <value>
                    <fullName>Endo Pharmaceuticals Inc.</fullName>
                </value>
                <value>
                    <fullName>Genentech, Inc</fullName>
                </value>
                <value>
                    <fullName>Gilead Sciences</fullName>
                </value>
                <value>
                    <fullName>GlaxoSmithKline</fullName>
                </value>
                <value>
                    <fullName>Hoffmann-La Roche</fullName>
                </value>
                <value>
                    <fullName>Janssen-Cilag</fullName>
                </value>
                <value>
                    <fullName>Janssen Pharmaceutica</fullName>
                </value>
                <value>
                    <fullName>Johnson &amp; Johnson</fullName>
                </value>
                <value>
                    <fullName>King Pharmaceuticals</fullName>
                </value>
                <value>
                    <fullName>Mead Johnson</fullName>
                </value>
                <value>
                    <fullName>Merck &amp; Co.</fullName>
                </value>
                <value>
                    <fullName>Novartis Pharmaceuticals Corporation</fullName>
                </value>
                <value>
                    <fullName>Novo Nordisk</fullName>
                </value>
                <value>
                    <fullName>NV Organon</fullName>
                </value>
                <value>
                    <fullName>Otsuka America Pharmaceuticals, Inc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Align_Id_vod__c</fullName>
        <description>Globally unique identifier for this object. This Id is managed by Align</description>
        <label>Master Align Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Cycle_Plans_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Detail-type products, checking this box prevents the product from being displayed in the Cycle Plan Target and Account Cycle Plans views. However the product will still be displayed in My Setup and child products can still be selected as samples or promotional items within a Call.</description>
        <label>No Cycle Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Details_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Detail-type products, checking this box prevents the product from showing up in the &quot;Detailing Priority&quot; section of a call report. However the product will still be displayed in My Setup and child products will still be selectable as samples or promotional items.</description>
        <label>No Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Metrics_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked the product will not show up in the Ratings and Evaluations section of the Account Profile.</description>
        <label>No Metrics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Promo_Items_vod__c</fullName>
        <description>This formula field defines whether the product catalog record appears in the Samples And Promotional Items section on the Call Report. If the result of the formula is TRUE, then the product will not appear on the Samples And Promotional Items section.</description>
        <formula>CASE(Product_Type_vod__c, &apos;Detail&apos;, &apos;TRUE&apos;, &apos;Order&apos;, &apos;TRUE&apos;, &apos;Kit Item&apos;, &apos;TRUE&apos;, &apos;BRC&apos;, &apos;TRUE&apos;, &apos;Market&apos;, &apos;TRUE&apos;, &apos;Submarket&apos;, &apos;TRUE&apos;, &apos;Inventory Monitoring&apos;, &apos;TRUE&apos;, &apos;Product Group&apos;, &apos;TRUE&apos;, &apos;Sample Product Group&apos;, &apos;TRUE&apos;, &apos;Detail Group&apos;,&apos;TRUE&apos;, &apos;Detail Topic&apos;, &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Promo Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to product to associate child products (samples, promotional items...) with their parent product.</description>
        <label>Parent Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Catalog</relationshipLabel>
        <relationshipName>Child_products_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Bound_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If used for a Product Group: Flag used to drive the default Product_Group_Level_Rule. When set to TRUE, only the Product_Group_Level_Rules - associated to the flagged Product Group the user has selected-  will be applied on the Order Line. If used for a Kit Item: flag to define a kit item as pricing relevant. When set to TRUE, the kit item will be included in pricing rule scales.</description>
        <label>Pricing Bound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Rule_Quantity_Bound_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the quantity ordered must be in the range specified in the product&apos;s pricing rules. Otherwise, orders for this product can be placed outside the ranges in the product&apos;s pricing rules. The price used in this case will be the base list price, as specified in Product_vod.Cost_vod.</description>
        <label>Pricing Rule Quantity Bound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Identifier_vod__c</fullName>
        <description>Additional attribute to identify products. It is used for searching and adding products when creating orders.</description>
        <label>Product Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Thumbnail_vod__c</fullName>
        <description>Stores the picture thumbnail of the product as a Base64 string</description>
        <label>Product Thumbnail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type_vod__c</fullName>
        <description>Picklist used to select the type of the product (Detail, Sample, Promotional Item...)</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternative Sample</fullName>
                </value>
                <value>
                    <fullName>High Value Promotional</fullName>
                </value>
                <value>
                    <fullName>Detail Group</fullName>
                </value>
                <value>
                    <fullName>Detail Topic</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Submarket</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Promotional</fullName>
                </value>
                <value>
                    <fullName>Reprint</fullName>
                </value>
                <value>
                    <fullName>BRC</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Kit Item</fullName>
                </value>
                <value>
                    <fullName>Inventory Monitoring</fullName>
                </value>
                <value>
                    <fullName>Product Group</fullName>
                </value>
                <value>
                    <fullName>Sample Product Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Value_vod__c</fullName>
        <description>Stores and shows the value associated to 1 unit of the selected Product</description>
        <label>Product Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_info__c</fullName>
        <description>Link to website containing product information.</description>
        <label>Product info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quantity_Per_Case_vod__c</fullName>
        <description>quantity per case</description>
        <label>Quantity Per Case</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Require_Discussion_vod__c</fullName>
        <description>Indicates whether or not a product discussion is required when this product is detailed.
No - No discussion is required when detailing this product.
Yes - A discussion record will always be required when detailing this product.</description>
        <inlineHelpText>Indicates whether or not a product discussion is required when detailing this product.
No - No discussion required
Yes - Discussion required</inlineHelpText>
        <label>Require Discussion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No_vod</fullName>
                </value>
                <value>
                    <fullName>Yes_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Key_Message_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this value to require a key message when this product is detailed.</description>
        <label>Require Key Message On Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restricted_States_vod__c</fullName>
        <description>Contains a comma separated list of state abbreviations where the product cannot be sampled. (i.e. “MA,PA”)</description>
        <label>Restrictions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines that a “Detail” product is considered Restricted.  Used for defaulting restricted products on accounts, and unassigned calls.</description>
        <label>Restrictions C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Quantity_Bound_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Sample Quantity Bound checkbox determines if the User will be restricted to only selecting the values defined in the Sample Quantity field or if the User has the ability to edit the Quantity picklist and enter in a value that is not contained in the Sample Quantity field.</description>
        <label>Sample Quantity Bound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Quantity_Picklist_vod__c</fullName>
        <description>Use this field to change the default values for sample quantity on the mobile device. Comma separated values will be populated in the sample quantity dropdown. If left blank, sample quantity will default to 1 through 20.</description>
        <label>Sample Quantity</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sample_U_M_vod__c</fullName>
        <description>The Sample U/M field defines the Units of Measurement for records with a Product Type of BRC or Order.  This field should only be populated for BRC or Order entries.</description>
        <label>Sample U/M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_vod__c</fullName>
        <description>This is the Schedule of the Controlled Substance, for example, IV</description>
        <label>Schedule</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code_vod__c</fullName>
        <description>This value is used to custom sort the list of product in order line entry.</description>
        <label>Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Distributor_Category_vod__c</fullName>
        <description>Category for the Drug. e.g 01, 11</description>
        <label>State Distributor Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_vod__c</fullName>
        <description>Picklist used to select the Therapeutic Area of the product such as Analgesics, Cardiology or Dermatology. Edit the picklist to change the Therapeutic Area options.</description>
        <label>Therapeutic Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analgesics</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Infectious Disease</fullName>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Opthalmology</fullName>
                </value>
                <value>
                    <fullName>Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Respiratory</fullName>
                </value>
                <value>
                    <fullName>Rheumatology</fullName>
                </value>
                <value>
                    <fullName>Transplant</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Class_vod__c</fullName>
        <description>Picklist used to select the Therapeutic Class of the product such as Narcotics or Pain Relief. Therapeutic Class is controlled by the Therapeutic Area picklist.</description>
        <label>Therapeutic Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Therapeutic_Area_vod__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Anti-Inflammatory Medicines (NSAIDs)</fullName>
                </value>
                <value>
                    <fullName>Cox-2 Inhibitors</fullName>
                </value>
                <value>
                    <fullName>Muscle Relaxants</fullName>
                </value>
                <value>
                    <fullName>Narcotics</fullName>
                </value>
                <value>
                    <fullName>Pain Relief</fullName>
                </value>
                <value>
                    <fullName>Antianginals</fullName>
                </value>
                <value>
                    <fullName>Antiarrhythmics</fullName>
                </value>
                <value>
                    <fullName>Anticoagulants (Blood Thinners)</fullName>
                </value>
                <value>
                    <fullName>CHF Agents</fullName>
                </value>
                <value>
                    <fullName>Diuretics (Combination &quot;Water&quot; Pills)</fullName>
                </value>
                <value>
                    <fullName>Diuretics (&quot;Water&quot; Pills)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (ACE Inhibitors)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Alpha Blockers)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Angiotensin Blockers)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Beta-blockers)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Calcium Channel Blockers)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Combination ACE Inhibitors)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Combination Angiotensin Blockers)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Combination Beta-blockers)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Combination Calcium Channel Blockers)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Long-acting Calcium Channel Blockers)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Miscellaneous)</fullName>
                </value>
                <value>
                    <fullName>High Blood Pressure (Miscellaneous Combination Products )</fullName>
                </value>
                <value>
                    <fullName>High Cholesterol (Others)</fullName>
                </value>
                <value>
                    <fullName>High Cholesterol (Statins)</fullName>
                </value>
                <value>
                    <fullName>Vasodilators</fullName>
                </value>
                <value>
                    <fullName>Acne</fullName>
                </value>
                <value>
                    <fullName>Foot Ulcers</fullName>
                </value>
                <value>
                    <fullName>Hair Loss</fullName>
                </value>
                <value>
                    <fullName>Topical Antibiotics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Aligned_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true then an entry in the My Setup Products for the a User must exist for the product to be visible on Call Report to a user.  Only applies to BRC and Promotional Items.</description>
        <label>User Aligned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM and Vault to reference product catalog entries.</description>
        <externalId>true</externalId>
        <label>Veeva External Id</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zvod_Custom_Text_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to display a custom text field for the specified product on Sample Transactions and Call Samples.</description>
        <label>Custom Text</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Product_vod__c</columns>
        <columns>Product_Type_vod__c</columns>
        <columns>Therapeutic_Class_vod__c</columns>
        <columns>Manufacturer_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Drug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Controlled_Sub_Schedule_Confirm_vod</fullName>
        <active>true</active>
        <description>This validation rules is in place to confirm that a Product, which has been marked as a Controlled Substance has a Schedule.</description>
        <errorConditionFormula>AND( Controlled_Substance_vod__c ,TRIM( Schedule_vod__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>The Schedule field is required when creating a Controlled Substance Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Bundle_Check_vod</fullName>
        <active>true</active>
        <description>Verifies that the Product Type is a Product Group if the Bundle Pack field is enabled</description>
        <errorConditionFormula>Bundle_Pack_vod__c &amp;&amp; !ISPICKVAL(Product_Type_vod__c, &apos;Product Group&apos;)</errorConditionFormula>
        <errorMessage>Bundle_Pack_vod__c can be set to TRUE only if the product type= Product Group</errorMessage>
    </validationRules>
</CustomObject>